should document API changes and deprecations, and other "large"
changes that have an effect on users.  Bug fixes and minor changes
aren't documented here, unless the bug-fix has a major observable
effect.  If you change something in VXL, please document it here.

---------------------------------------------------------------------------

****************************
VXL 1.7.0	- November 2006
****************************

****************************
VXL 1.6.0	- August 2006
****************************

      - vnl has been made thread safe, fixing a major weakness with
        vxl

      - VXL's GUI Library (vgui) now has preliminary support for wxWidgets
        as the rendering toolkit. It has been tested only in Windows
        platforms and has known problems with UNICODE builds of wxWidgets
        (to be solved in a later release). To turn-on compilation of the
        wxWidgets support set the VGUI_USE_WX option in CMake to ON (OFF
        by default).

      - Add VXL_IMPORT_BUILD_SETTINGS option (default to YES) to allow
        private libraries to have different compiler settings. (Setting
        to NO will permit differences.)
        
      - vsl can now read/write very large matrices and images in low-memory
        situations.

      - PNG reader now supports sBIT for recovering the original bitdepth.

****************************
VXL 1.5.0	- April 2006
****************************

      - Add support for ICC 8.1

      - VC6 compilers are no longer supported

      - VC7.0 compiler support is deprecated.  VC7.0 will not be
        supported in vxl 1.6.

      - New (somewhat experimental) support for reading video files
        and receiving input from usb/1394 cameras through DirectShow in
        Windows systems has been included in contrib/brl/bbas/vidl2.  vidl2
        also includes support for video-for-linux cameras and 1394 cameras
        under linux.

      - A new runtime logging facility with almost no overhead has